samples/_failures_safe/1761087475_e7ca91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64bb87e7.c: In function ‘tokenize’:
./samples/SAFE/__tmp_64bb87e7.c:166:9: error: expected declaration or statement at end of input
  166 |         token_count++;
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_64bb87e7.c:166:9: error: expected declaration or statement at end of input
